fix(content): improve banner header visibility

--- a/src/content/header/sidebar-server.scss
+++ b/src/content/header/sidebar-server.scss
@@ -3,6 +3,10 @@
 
 .container_f37cb1 {
 	&.bannerVisible_f37cb1 {
+		.header_f37cb1 {
+			background-image: linear-gradient(var(--backdrop), transparent);
+		}
+
 		.headerContent_f37cb1 {
 			filter: drop-shadow(0 1px 1px var(--bg-backdrop));
 		}
@@ -47,6 +51,8 @@
 		$selector: "::after",
 		$overflow-workaround-direction: "right"
 	);
+
+	color: inherit;
 
 	flex-shrink: 0;
 
